<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirdSighting2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Date">Date</string>
    <string name="Location">Location:</string>
    <string name="Description">Description:</string>
    <string name="title">Note Title:</string>
    <string name="BirdName">Bird Name:</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="Add">Add</string>

</resources>
